# flock

./: AGENTS.md  Cargo.toml  E2E.md  LICENSE  README.md  ROADMAP.md
flock/: Cargo.toml
flock/src/: config.rs  goosed.rs  main.rs  plugin.rs
flock/src/templates/: mcp_app_proxy.html  mcp_ui_proxy.html
flock/tests/: local_mesh_e2e.rs  ollama_e2e.rs  ssh_private_mesh_e2e.rs
scripts/: test-local-mesh-e2e.sh  test-ollama-e2e.sh  test-ssh-private-mesh-e2e.sh
specs/: config-schema.md  flock-spec.md  implementation-plan.md  mesh-llm-protocol-changes.md  route-inventory.md
