[package]
name = "flock"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
mesh-llm-plugin = { path = "../../mesh-llm/mesh-llm/plugin" }
rmcp = { version = "1.2", features = ["server"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.9"
