[package]
name = "flock"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = "0.3"
hex = "0.4"
mesh-llm-plugin = { path = "../../mesh-llm/mesh-llm/plugin" }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rmcp = { version = "1.2", features = ["server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.9"

[dev-dependencies]
tempfile = "3"
